...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Title:   "
                android:textSize="24sp" />

            <TextView
                android:id="@+id/offerTitleID"
                android:layout_width="294dp"
                android:layout_height="45sp"
                android:layout_weight="1"
                android:textSize="24sp" />

            <Space
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Company:   "
                android:textSize="24sp" />

            <TextView
                android:id="@+id/offerCompanyID"
                android:layout_width="239dp"
                android:layout_height="45sp"
                android:layout_weight="1"
                android:textSize="24sp" />

            <Space
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="City:   "
                android:textSize="24sp" />

            <TextView
                android:id="@+id/offerCityID"
                android:layout_width="168dp"
                android:layout_height="45sp"
                android:layout_weight="1"
                android:textSize="24sp" />

            <TextView
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="   State:   "
                android:textSize="24sp" />

            <TextView
                android:id="@+id/offerStateID"
                android:layout_width="42dp"
                android:layout_height="45sp"
                android:layout_weight="1"
                android:textSize="24sp" />

            <Space
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cost of living index:   "
                android:textSize="24sp" />

            <TextView
                android:id="@+id/offerCostID"
                android:layout_width="142dp"
                android:layout_height="45sp"
                android:layout_weight="1"
                android:textSize="24sp" />

            <Space
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Commute time:   "
                android:textSize="24sp" />

            <TextView
                android:id="@+id/offerCommuteID"
                android:layout_width="134dp"
                android:layout_height="45sp"
                android:layout_weight="1"
                android:textSize="24sp" />

            <TextView
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/offerSalaryID"
                android:layout_width="171dp"
                android:layout_height="45sp"
                android:layout_weight="1"
                android:textSize="24sp" />

            <Space
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/offerBonusID"
                android:layout_width="171dp"
                android:layout_height="45sp"
                android:layout_weight="1"
                android:textSize="24sp" />

            <Space
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Retirement matching:   "
                android:textSize="24sp" />

            <TextView
                android:id="@+id/offerRetirementID"
                android:layout_width="87dp"
                android:layout_height="45sp"
                android:layout_weight="1"
                android:textSize="24sp" />

            <TextView
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Leave time:   "
                android:textSize="24sp" />

            <TextView
                android:id="@+id/offerLeaveID"
                android:layout_width="160dp"
                android:layout_height="45sp"
                android:layout_weight="1"
                android:textSize="24sp" />

            <TextView
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Compare with current job"
            android:textSize="18sp" />

        <Button
            android:id="@+id/enterAnotherOfferButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter another job offer"
            android:textSize="18sp" />

        <Button
            android:id="@+id/returnToMainButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Return to main menu"
            android:textSize="18sp" />

    </LinearLayout>
...
