...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Title:   "
                android:textSize="24sp" />

            <EditText
                android:id="@+id/currentTitleID"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="24sp" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Company:   "
                android:textSize="24sp" />

            <EditText
                android:id="@+id/currentCompanyID"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="24sp" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="City:   "
                android:textSize="24sp" />

            <EditText
                android:id="@+id/currentCityID"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="24sp" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="   State:   "
                android:textSize="24sp" />

            <EditText
                android:id="@+id/currentStateID"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="24sp" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cost of living index:   "
                android:textSize="24sp" />

            <EditText
                android:id="@+id/currentCostID"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textSize="24sp" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Commute time:   "
                android:textSize="24sp" />

            <EditText
                android:id="@+id/currentCommuteID"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="24sp" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/currentSalaryID"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="24sp"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/currentBonusID"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="24sp" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Retirement matching:   "
                android:textSize="24sp" />

            <EditText
                android:id="@+id/currentRetirementID"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="24sp" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Leave time:   "
                android:textSize="24sp" />

            <EditText
                android:id="@+id/currentLeaveID"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="24sp" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/currentSaveButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClickSaveCurrent"
            android:text="Save"
            android:textSize="18sp" />

        <Button
            android:id="@+id/currentCancelButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textSize="18sp" />

    </LinearLayout>
...
