...
            <Space
                android:layout_width="175dp"
                android:layout_height="49dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/editCurrentJobButtonID"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:password="false"
                android:text="Edit Current Job"
                android:textSize="18sp" />

...
            <Space
                android:layout_width="175dp"
                android:layout_height="49dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/enterJobOfferButtonID"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:password="false"
                android:text="Enter Job Offer"
                android:textSize="18sp" />

...
            <Space
                android:layout_width="175dp"
                android:layout_height="49dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/compareJobsButtonID"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:password="false"
                android:text="Make Job Comparison"
                android:textSize="18sp" />

...
