...
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/offerSaveButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClickSaveOffer"
            android:text="Save"
            android:textSize="18sp" />

        <Button
            android:id="@+id/offerCancelButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textSize="18sp" />

    </LinearLayout>
...
